--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <footer class="site-footer clearfix">
       <section class="copyright">
         <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; 
-              {{date format="YYYY"}} &bull; All rights reserved.
+              {{date format="YYYY"}} &bull; All rights reserved ... under <a href="Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
       </section>
       <section class="poweredby">Made with Jekyll using 
         <a href="http://github.com/rosario/kasper">Kasper theme</a>
