--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -88,10 +88,12 @@ post_class: post-template
                 <section class="author">
                     <!-- Author Name -->
                     <h4> {{ site.author }} </h4>
+                    {% if site.bio %}
                     <!-- Author Bio -->
                     <p> 
-                        I'm Grid Architect at GridDynamics in San Francisco, USA. You can find me also in <a href="http://plus.google.com/109421189749606131821">Google+</a> or <a href="https://www.linkedin.com/in/sotnikdv">LinkedIn</a>.
+                        {{ site.bio }}
                     </p>
+                    {% endif %}
                 </section>                
             {% endif %}
 
