--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -80,22 +80,42 @@ post_class: post-template
 
         <footer class="post-footer">
             <!-- If we want to display author's name and bio -->
-            {% if site.author %}
+            {% if post.author_name %}
+                <figure class="author-image">
+                    <a class="img" href="{{ post.author_url }}" style="background-image: url({% if post.author_image %}{{ post.author_image }}{% else %}/assets/images/profile.png{% endif %})">
+                    <span class="hidden">{{post.author_name}}'s Picture</span></a>
+                </figure>
+                <section class="author">
+                    <!-- Post Author Name -->
+                    <h4> {{ post.author_name }} </h4>
+                    {% if post.author_bio %}
+                    <!-- Post Author Bio -->
+                    <p> 
+                        {{ post.author_bio }}
+                    </p>
+                    {% endif %}
+                </section>                
+            {% elseif site.author %}
                 <figure class="author-image">
                     <a class="img" href="{{ site.baseurl }}" style="background-image: url(/assets/images/profile.png)">
                     <span class="hidden">{{site.author}}'s Picture</span></a>
                 </figure>
                 <section class="author">
-                    <!-- Author Name -->
+                    <!-- Site Author Name -->
                     <h4> {{ site.author }} </h4>
                     {% if site.bio %}
-                    <!-- Author Bio -->
+                    <!-- Site Author Bio -->
                     <p> 
                         {{ site.bio }}
                     </p>
                     {% endif %}
                 </section>                
             {% endif %}
+
+
+
+
+
 
             <!-- Share links section -->
             {% include share.html %}
