--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -80,7 +80,7 @@ post_class: post-template
 
         <footer class="post-footer">
             <!-- If we want to display author's name and bio -->
-            {% if post.author_name %}
+            {% if page.author_name %}
                 <figure class="author-image">
                     <a class="img" href="{{ post.author_url }}" style="background-image: url({% if post.author_image %}{{ post.author_image }}{% else %}/assets/images/profile.png{% endif %})">
                     <span class="hidden">{{post.author_name}}'s Picture</span></a>
