--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -95,7 +95,7 @@ post_class: post-template
                     </p>
                     {% endif %}
                 </section>                
-            {% elseif site.author %}
+            {% elsif site.author %}
                 <figure class="author-image">
                     <a class="img" href="{{ site.baseurl }}" style="background-image: url(/assets/images/profile.png)">
                     <span class="hidden">{{site.author}}'s Picture</span></a>
