--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -102,7 +102,7 @@ post_class: post-template
                 </figure>
                 <section class="author">
                     <!-- Site Author Name -->
-                    <h4> {{ site.author }} {{ post.author_name }} {{ page.author_name }} ++ </h4>
+                    <h4> {{ site.author }} 1 {{ post.author_name }} 2 {{ page.author_name }} ++ </h4>
                     {% if site.bio %}
                     <!-- Site Author Bio -->
                     <p> 
