--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -80,18 +80,18 @@ post_class: post-template
 
         <footer class="post-footer">
             <!-- If we want to display author's name and bio -->
-            {% if post.author_name %}
+            {% if page.author_name %}
                 <figure class="author-image">
-                    <a class="img" href="{{ post.author_url }}" style="background-image: url({% if post.author_image %}{{ post.author_image }}{% else %}/assets/images/profile.png{% endif %})">
-                    <span class="hidden">{{post.author_name}}'s Picture</span></a>
+                    <a class="img" href="{{ page.author_url }}" style="background-image: url({% if page.author_image %}{{ page.author_image }}{% else %}/assets/images/profile.png{% endif %})">
+                    <span class="hidden">{{ page.author_name }}'s Picture</span></a>
                 </figure>
                 <section class="author">
                     <!-- Post Author Name -->
-                    <h4> {{ post.author_name }} </h4>
-                    {% if post.author_bio %}
+                    <h4> {{ page.author_name }} </h4>
+                    {% if page.author_bio %}
                     <!-- Post Author Bio -->
                     <p> 
-                        {{ post.author_bio }}
+                        {{ page.author_bio }}
                     </p>
                     {% endif %}
                 </section>                
@@ -102,7 +102,7 @@ post_class: post-template
                 </figure>
                 <section class="author">
                     <!-- Site Author Name -->
-                    <h4> {{ site.author }} 1 {{ post.author_name }} 2 {{ page.author_name }} ++ </h4>
+                    <h4> {{ site.author }} </h4>
                     {% if site.bio %}
                     <!-- Site Author Bio -->
                     <p> 
