--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,16 @@ post_class: post-template
         <header class="post-header">
             <h1 class="post-title">{{ page.title }}</h1>
             <section class="post-meta">                
-                <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time>
+                <time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">
+            	    {{ page.date | date_to_string }}
+            	    {% if page.update %}
+	        	{% capture temp_day_created %}{{ page.date | date:"%Y-%m-%d" }}{% endcapture %}
+	        	{% capture temp_day_updated %}{{ page.update | date:"%Y-%m-%d" }}{% endcapture %}
+            		{% if temp_day_created != temp_day_updated %}
+            		    {{ page.update | date_to_string | prepend: ', updated ' }}
+            		{% endif %}
+            	    {% endif %}
+            	</time>
                 {% if page.categories.size > 0 %} 
                     {{ page.categories | array_to_sentence_string | prepend: 'on ' }} 
                 {% endif %}
