--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ post_class: post-template page-template
 ---
 
 <nav class="main-nav clearfix">
-    <a class="back-button icon-arrow-left" href="{{ site.baseurl }}">Home</a>
+    <a class="back-button icon-arrow-left" href="{{ site.baseurl }}{% if site.cover %}#content{% endif %}">Home</a>
     <a class="subscribe-button icon-feed" href="{{ site.baseurl }}rss.xml">Subscribe</a>
 </nav>
 
