--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -63,7 +63,7 @@ post_class: post-template
     	    <div id="disqus_thread"></div>
 		<script type="text/javascript">
 		    /* * * CONFIGURATION VARIABLES * * */
-		    var disqus_shortname = 'rndblog-github';
+		    var disqus_shortname = '{{site.disqus_shortname}}';
     
 		    /* * * DON'T EDIT BELOW THIS LINE * * */
 		    (function() {
