--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -723,6 +723,7 @@ margin on the iframe, cause it breaks stuff. */
     border-bottom: #EBF2F6 1px solid;
     word-break: break-word;
     hyphens: auto;
+    font-size: 88%;
 }
 
 /* Add a little circle in the middle of the border-bottom on our .post
