--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -611,8 +611,34 @@ margin on the iframe, cause it breaks stuff. */
     border-radius: 3px;
     background: rgba(0,0,0,0.1);
     transition: all ease 0.3s;
+    margin: 5px;
 }
 .subscribe-button:before {
+    font-size: 9px;
+    margin-right: 6px;
+}
+
+.fork-button {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: inline-block;
+    float: right;
+    height: 38px;
+    padding: 0 20px;
+    border: transparent 1px solid;
+    color: #9EABB3;
+    text-align: center;
+    font-size: 12px;
+    text-transform: uppercase;
+    line-height: 35px;
+    white-space: nowrap;
+    border-radius: 3px;
+    background: rgba(0,0,0,0.1);
+    transition: all ease 0.3s;
+    margin: 5px;
+}
+.fork-button:before {
     font-size: 9px;
     margin-right: 6px;
 }
