--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1553,8 +1553,7 @@ body:not(.post-template) .post-title {
     }
     .no-cover .main-nav.overlay .back-button,
     .no-cover .main-nav.overlay .subscribe-button,
-    .no-cover .main-nav.overlay .fork-button
-     {
+    .no-cover .main-nav.overlay .fork-button {
         border: none;
     }
 
