--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -618,31 +618,6 @@ margin on the iframe, cause it breaks stuff. */
     margin-right: 6px;
 }
 
-.fork-button {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    display: inline-block;
-    float: right;
-    height: 38px;
-    padding: 0 20px;
-    border: transparent 1px solid;
-    color: #9EABB3;
-    text-align: center;
-    font-size: 12px;
-    text-transform: uppercase;
-    line-height: 35px;
-    white-space: nowrap;
-    border-radius: 3px;
-    background: rgba(0,0,0,0.1);
-    transition: all ease 0.3s;
-    margin: 5px;
-}
-.fork-button:before {
-    font-size: 9px;
-    margin-right: 6px;
-}
-
 /* Special styles when overlaid on an image*/
 .main-nav.overlay {
     position: absolute;
@@ -658,8 +633,7 @@ margin on the iframe, cause it breaks stuff. */
 }
 .no-cover .main-nav.overlay,
 .no-cover .back-button,
-.no-cover .subscribe-button,
-.no-cover .fork-button {
+.no-cover .subscribe-button {
     background: none;
 }
 
@@ -668,8 +642,7 @@ margin on the iframe, cause it breaks stuff. */
 }
 
 .main-nav.overlay .back-button,
-.main-nav.overlay .subscribe-button,
-.main-nav.overlay .fork-button, {
+.main-nav.overlay .subscribe-button {
     border-color: rgba(255,255,255,0.6);
 }
 
@@ -682,8 +655,7 @@ margin on the iframe, cause it breaks stuff. */
 
 /* Add a border to the buttons on hover */
 .back-button:hover,
-.subscribe-button:hover,
-.fork-button:hover {
+.subscribe-button:hover {
     border-color: #bfc8cd;
     color: #9EABB3;
 }
@@ -723,8 +695,7 @@ margin on the iframe, cause it breaks stuff. */
 }
 
 .no-cover .main-nav.overlay .back-button,
-.no-cover .main-nav.overlay .subscribe-button,
-.no-cover .main-nav.overlay .fork-button {
+.no-cover .main-nav.overlay .subscribe-button {
     color: rgba(0,0,0,0.4);
     border-color: rgba(0,0,0,0.3);
 }
@@ -1517,8 +1488,7 @@ body:not(.post-template) .post-title {
     }
 
     .back-button,
-    .subscribe-button,
-    .fork-button {
+    .subscribe-button {
         height: 44px;
         line-height: 41px;
         border-radius: 0;
@@ -1526,8 +1496,7 @@ body:not(.post-template) .post-title {
         background: transparent;
     }
     .back-button:hover,
-    .subscribe-button:hover,
-    .fork-button:hover {
+    .subscribe-button:hover {
         border-color: #ebeef0;
         color: #2e2e2e;
         background: #ebeef0;
@@ -1537,8 +1506,7 @@ body:not(.post-template) .post-title {
         padding: 0 15px 0 10px;
     }
 
-    .subscribe-button,
-    .fork-button {
+    .subscribe-button {
         padding: 0 12px;
     }
 
@@ -1552,14 +1520,12 @@ body:not(.post-template) .post-title {
         background: none;
     }
     .no-cover .main-nav.overlay .back-button,
-    .no-cover .main-nav.overlay .subscribe-button,
-    .no-cover .main-nav.overlay .fork-button {
+    .no-cover .main-nav.overlay .subscribe-button {
         border: none;
     }
 
     .main-nav.overlay .back-button,
-    .main-nav.overlay .subscribe-button,
-    .main-nav.overlay .fork-button {
+    .main-nav.overlay .subscribe-button {
         border-color: transparent;
     }
 
