--- a/_includes/noedit_note.html
+++ b/_includes/noedit_note.html
@@ -1,7 +1,7 @@
 <div class="note warning">
   <h5>Author decided that changes to this post are undesirable</h5>
   <p>
-    Nevertheless, you still <a href="https://github.com/rndblog/rndblog.github.io/edit/master/{{ page.path }}">can propose changes on GitHub</a>. Please see <a href="">editing policy</a> and <a href="http://rndblog.github.io/common/2015/08/28/welcome.html">learn more</a> about the project.
+    Nevertheless, you still <a href="https://github.com/rndblog/rndblog.github.io/edit/master/{{ page.path }}">can propose changes on GitHub</a>. Please see <a href="http://rndblog.github.io/common/2015/09/13/editing-policy.html">editing policy</a> and <a href="http://rndblog.github.io/common/2015/08/28/welcome.html">learn more</a> about the project.
   </p>
 </div>
 
