--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -727,6 +727,11 @@ margin on the iframe, cause it breaks stuff. */
     font-size: 88%;
 }
 
+.post-template .post {
+    border-left: #EBF2F6 1px solid;
+    padding-left: 2rem;
+}
+
 /* Add a little circle in the middle of the border-bottom on our .post
    just for the lolz and stylepoints. */
 .post:after {
