--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -245,7 +245,8 @@ p, ul, ol, dl {
     -webkit-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
     -moz-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
     -o-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
-    margin: 0 0 1.75em 0;
+    margin: 0 0 1.3em 0;
+    text-align : justify;
 }
 
 ol, ul {
@@ -725,6 +726,11 @@ margin on the iframe, cause it breaks stuff. */
     word-break: break-word;
     hyphens: auto;
     font-size: 88%;
+
+// alphyr option
+//    font-size: 12pt;
+//    font-family: Helvetica, sans-serif;
+
 }
 
 .post-template .post {
