Fixed edit condition + license moved to settings

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <footer class="site-footer clearfix">
       <section class="copyright">
         <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; 
-              {{date format="YYYY"}} &bull; <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Greative Commons License, BY-NC-SA</a>
+              {{date format="YYYY"}} &bull; {{ site.license }}
       </section>
       <section class="poweredby">Made with Jekyll using 
         <a href="http://github.com/rosario/kasper">Kasper theme</a>
